--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
+spring.jpa.defer-datasource-initialization=true
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
