--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 ##spring.jpa.defer-datasource-initialization=true
-#
 #spring.jpa.show-sql=true
-#
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
