--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 ##spring.jpa.defer-datasource-initialization=true
 #spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.yaml
