--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.0'
 	implementation 'org.liquibase:liquibase-core:4.14.0'
 	implementation group: 'joda-time', name: 'joda-time', version: '2.3'
+	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+
 
 
 //	implementation 'org.flywaydb:flyway-core'
