--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'com.toedter:spring-hateoas-jsonapi:1.5.1'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
 	implementation 'org.liquibase:liquibase-core:4.14.0'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.11'
+
 
 //	implementation 'org.flywaydb:flyway-core'
 	implementation 'junit:junit:4.13.2'
