--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.7.5'
 	implementation 'org.hibernate:hibernate-core'
 	implementation 'org.hibernate:hibernate-entitymanager'
 	implementation 'com.toedter:spring-hateoas-jsonapi:1.5.1'
