--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.2'
+	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
 	id 'java'
 }
@@ -23,12 +23,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.7.5'
+	implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.5.2.RELEASE'
+	implementation group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.1.1.RELEASE'
+	implementation group: 'org.springframework.security', name: 'spring-security-config'
 	implementation 'org.hibernate:hibernate-core'
 	implementation 'org.hibernate:hibernate-entitymanager'
 	implementation 'com.toedter:spring-hateoas-jsonapi:1.5.1'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
-	implementation 'org.liquibase:liquibase-core:4.14.0'
+	implementation 'org.liquibase:liquibase-core'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.11'
 	implementation group: 'joda-time', name: 'joda-time', version: '2.3'
 
